[tool.poetry]
name = "codesignal-smart-mobility-optimizer"
version = "0.1.0"
description = "A simple Python project that calculates how much total distance can be traveled using scooters before reaching a finish line."
license = "MIT"
authors = ["ptobarra <12190195+ptobarra@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
